parse a post object and word mapper